# trimx-cli-based-video-clipper

./: .cursorrules  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  PRIORITY_MATRIX.md  PROJECT_STATUS.md  README.md  SECURITY.md  SINGLE_PHASE_ROADMAP.md  TROUBLESHOOTING.md  check_rust.sh  docker-compose.yml  report.doc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml
ADRs/: ADR-001-architecture-style.md  ADR-002-execution-backend-strategy.md  ADR-003-core-domain-policies.md  ADR-004-error-taxonomy-and-exit-codes.md  ADR-005-configuration-management-strategy.md  ADR-006-logging-and-observability-strategy.md  ADR-007-architecture-implementation-strategy.md
config/: development.toml  production.toml.template
examples/: trimx_example.sh  trimx_python_example.py
src/: config_initialization.rs  lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/env_windows/: mod.rs
src/adapters/exec_ffmpeg/: mod.rs
src/adapters/exec_libav/: mod.rs
src/adapters/fs_windows/: mod.rs
src/adapters/probe_ffprobe/: mod.rs
src/adapters/probe_libav/: mod.rs
src/adapters/toml_config/: mod.rs
src/adapters/tracing_log/: mod.rs
src/app/: container.rs  mod.rs
src/app/clip_interactor/: mod.rs
src/app/inspect_interactor/: mod.rs
src/cli/: args.rs  commands.rs  mod.rs
src/domain/: mod.rs
src/domain/errors/: mod.rs
src/engine/: clipper.rs  copy.rs  hybrid.rs  mod.rs  progress.rs  reencode.rs
src/error/: mod.rs
src/output/: mod.rs  verifier.rs  writer.rs
src/planner/: gop.rs  keyframe_analyzer.rs  mod.rs  strategy.rs
src/ports/: mod.rs
src/probe/: inspector.rs  mod.rs  validator.rs
src/streams/: audio_mapper.rs  mapper.rs  mod.rs  processor.rs  subtitle_processor.rs
src/utils/: container_validator.rs  logging.rs  memory_manager.rs  mod.rs  path.rs  time.rs
tests/: engine_tests.rs  integration_tests.rs
(+6 files in other folders)
